<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--直接用数字表示颜色-->
    <TextView
        android:id="@+id/tv_simple_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_simple_message"
        android:background="@color/cardview_dark_background"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/iv_simple"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_simple_checkbox" />

        <CheckBox
            android:id="@+id/checkBox_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_checkBox_basket" />

        <CheckBox
            android:id="@+id/checkBox_football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_checkBox_football" />
        <CheckBox
            android:id="@+id/checkBox_pingpong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_checkBox_pingpong" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_for_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitHobbyChoice"
        android:text="@string/label_btn_for_checkbox" />


</LinearLayout>