<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_test_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_testSimple" />

        <Button
            android:id="@+id/btn_test_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_testMenu" />

        <Button
            android:id="@+id/btn_test_processBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_testProcessBar" />

        <Button
            android:id="@+id/btn_test_dialogue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_testDialogue" />

        <Button
            android:id="@+id/btn_test_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_test_listview"
            android:layout_weight="@integer/material_motion_duration_long_1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>